# fast-requests

./: Cargo.toml  README.md  main.py  pyproject.toml
benchmarks/: compare.py
src/: lib.rs  main.rs
