[package]
name = "fast-requests"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_requests"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
pyo3 = "0.27.0"
reqwest = "0.13.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}

